# Mal_Query

./: .gitignore  Cargo.toml  README.md  token.txt
src/: jikan.rs  lib.rs  main.rs
src/myanimelist/: builders.rs  login.rs  mod.rs  models.rs  retrieval.rs  user.rs
tests/: test_builders.rs  test_retrieval.rs  test_retrieval_manga.rs  test_users.rs
