[package]
name = "mal-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
open = "5.0.1"
pkce = "0.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tiny_http = "0.12.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[features]
jikan = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3